--- a/3.4HW.md
+++ b/3.4HW.md
@@ -75,5 +75,61 @@
 config.vm.network "forwarded_port", guest: 19999, host: 19999
 После успешной перезагрузки в браузере на своем ПК (не в виртуальной машине) вы должны суметь зайти на localhost:19999. Ознакомьтесь с метриками, которые по умолчанию собираются Netdata и с комментариями, которые даны к этим метрикам.
 
+*   sudo apt install -y netdata
+*   $ sudo nano /etc/netdata/netdata.conf 
+*   localhost на bind to = 0.0.0.0
+*   $ systemctl restart netdata
+*   config.vm.network "forwarded_port", guest: 19999, host: 19999
+*   vagrant reload:
+*   http://LocalHost:19999/#menu_system_submenu_cpu;theme=slate  // скрин прилагаю Grodzenskiy_3_4_3.JPG
+
+### Можно ли по выводу dmesg понять, осознает ли ОС, что загружена не на настоящем оборудовании, а на системе виртуализации?
+*   vagrant@ubuntu-20:~$ dmesg | grep virtual
+*   [    0.009792] Booting paravirtualized kernel on Hyper-V
+*   [    2.799401] systemd[1]: Detected virtualization microsoft.
+*   =========================================
+### Как настроен sysctl fs.nr_open на системе по-умолчанию? Узнайте, что означает этот параметр. Какой другой существующий лимит не позволит достичь такого числа (ulimit --help)?
+* Стандартное значение nr_open: 1024*1024 (1048576)
+* cat /proc/sys/fs/nr_open  // в виртуалке значение такое.
+* 1048576
+* Есть параметр ulimit -n the maximum number of open file descriptors, но так же есть лимиты Хард (-Hn) и софт (-Sn)  и лимит Хард очень похож на параметр nr_open
+* vagrant@ubuntu-20:~$ ulimit -n 
+* 1024
+* vagrant@ubuntu-20:~$ ulimit -Hn
+* 1048576
+* vagrant@ubuntu-20:~$ ulimit -Sn
+* 1024
+* =====================================
+### Запустите любой долгоживущий процесс (не ls, который отработает мгновенно, а, например, sleep 1h) в отдельном неймспейсе процессов; покажите, что ваш процесс работает под PID 1 через nsenter. Для простоты работайте в данном задании под root (sudo -i). Под обычным пользователем требуются дополнительные опции (--map-root-user) и т.д
+* sudo -i
+* root@ubuntu-20:~# unshare -f --pid --mount-proc sleep 1h
+* ^C
+* root@ubuntu-20:~# ps
+*     PID TTY          TIME CMD
+*  10673 pts/0    00:00:00 sudo
+*  10674 pts/0    00:00:00 bash
+*  10711 pts/0    00:00:00 sleep
+*  10725 pts/0    00:00:00 ps
+*  root@ubuntu-20:~# nsenter --target 10711 --pid --mount
+*  root@ubuntu-20:/# ps
+*  PID TTY          TIME CMD
+*  1 pts/0    00:00:00 sleep
+*  2 pts/0    00:00:00 bash
+*  11 pts/0    00:00:00 ps
+*  ==============================
+
+### Найдите информацию о том, что такое :(){ :|:& };:. Запустите эту команду в своей виртуальной машине Vagrant с Ubuntu 20.04 (это важно, поведение в других ОС не проверялось). Некоторое время все будет "плохо", после чего (минуты) – ОС должна стабилизироваться. Вызов dmesg расскажет, какой механизм помог автоматической стабилизации. Как настроен этот механизм по-умолчанию, и как изменить число процессов, которое можно создать в сессии?
+* :() определил функцию :
+* {:|: &}  запустили функцию : и перенаправили её выход на вход еще одной :  & в фоне что бы дочении процессы не умирали а плодились.
+* ; разделитель
+* : запускает функции
+* функция которая вызывает себя дважды , и множется съедая ресурсы.
+* 
+* root@ubuntu-20:/# dmesg  
+*  [ 7465.753493] cgroup: fork rejected by pids controller in /user.slice/user-1000.slice/session-3.scope // собственно мханизм стабилизации
+*  изменить число процессов в сесии 
+*   ulimit -u
+*   3322 //по умолчанию значение это  можно уменьшить это значение до 50-100 это значително сократит время стабилизации системы
+*   ulimit -u 77
 *  
 
