--- a/3.4HW.md
+++ b/3.4HW.md
@@ -39,7 +39,7 @@
 ### Ознакомьтесь с опциями node_exporter и выводом /metrics по-умолчанию. Приведите несколько опций, которые вы бы выбрали для базового мониторинга хоста по CPU, памяти, диску и сети.
 * sudo apt install lynx
 * lynx http://localhost:9100/metrics  скрин прилагаю Grodzenskiy_3_4_2.JPG
-* # TYPE node_cpu_seconds_total counter
+*  TYPE node_cpu_seconds_total counter
 * node_cpu_seconds_total{cpu="0",mode="idle"} 2357.25
 * node_cpu_seconds_total{cpu="0",mode="iowait"} 10.83
 * node_cpu_seconds_total{cpu="0",mode="irq"} 0
@@ -48,23 +48,23 @@
 * node_cpu_seconds_total{cpu="0",mode="steal"} 0
 * node_cpu_seconds_total{cpu="0",mode="system"} 5.24
 * node_cpu_seconds_total{cpu="0",mode="user"} 14.74
-* # TYPE node_disk_io_now gauge
+*  TYPE node_disk_io_now gauge
 * node_disk_io_now{device="dm-0"} 0
 * node_disk_io_now{device="dm-1"} 0
 * node_disk_io_now{device="sda"} 0
 * node_disk_io_now{device="sr0"} 0
-* # TYPE node_disk_io_time_seconds_total counter
+*  TYPE node_disk_io_time_seconds_total counter
 * node_disk_io_time_seconds_total{device="dm-0"} 7.872
 * node_disk_io_time_seconds_total{device="dm-1"} 0.064
 * node_disk_io_time_seconds_total{device="sda"} 8.104000000000001
 * node_disk_io_time_seconds_total{device="sr0"} 0
-* # TYPE node_memory_MemAvailable_bytes gauge
+*  TYPE node_memory_MemAvailable_bytes gauge
 * node_memory_MemAvailable_bytes 6.91421184e+08
-* # TYPE node_memory_MemFree_bytes gauge
+*  TYPE node_memory_MemFree_bytes gauge
 * node_memory_MemFree_bytes 4.86002688e+08
-* # TYPE node_network_receive_errs_total counter
+*  TYPE node_network_receive_errs_total counter
 * node_network_receive_errs_total{device="eth0"} 0
-* # TYPE node_network_transmit_errs_total counter
+*  TYPE node_network_transmit_errs_total counter
 * node_network_transmit_errs_total{device="eth0"} 0
 * ===================================================
 
