--- a/3.3HW.md
+++ b/3.3HW.md
@@ -91,16 +91,23 @@
 *  ===================================
 ### Используя -o stat для ps, определите, какой наиболее часто встречающийся статус у процессов в системе. В man ps ознакомьтесь (/PROCESS STATE CODES) что значат дополнительные к основной заглавной буквы статуса процессов. Его можно не учитывать при расчете (считать S, Ss или Ssl равнозначными).
 *   T    stopped by job control signal  // остановлены по управляющему сигналу
-*   sudo ps -s
-*     UID     PID          PENDING          BLOCKED          IGNORED           CAUGHT STAT TTY        TIME COMMAND
-*     0     964 0000000000000000 0000000000000000 0000000000000006 0000000000000000 Ss+  tty1       0:00 /sbin/agetty -o -
-*     0    4812 0000000000000000 0000000000000000 0000000000000000 0000000180037a07 T    pts/0      0:00 sudo ping 8.8.8.8
-*     0    4814 0000000000000000 0000000000000000 0000000000000000 0000000000002006 T    pts/0      0:00 ping 8.8.8.8
-*     0    7132 0000000000000000 0000000000000000 0000000000000000 0000000180037a07 T    pts/0      0:00 sudo /usr/sbin/op
-*     0    7133 0000000000000000 0000000000000000 0000000001001000 0000000180000002 T    pts/0      0:00 /usr/bin/python3
-*     0   17442 0000000000000000 0000000000000000 0000000000000000 00000001800b7a07 S+   pts/0      0:00 sudo ps -s
-*     0   17443 0000000000000000 0000000000000000 0000000000000000 00000001f3d1fef9 R+   pts/0      0:00 ps -s
-*  делаю вывод что наиболее частый статус T - останвлен. 
+*   I    Idle kernel thread  // поток ядра
+*   sudo ps aux | awk {'print $8'} | sort | uniq -c
+*     1 D<s
+*     5 I
+*    37 I<
+*     1 R+
+*    22 S
+*     4 S+
+*     1 Sl
+*     1 SLsl
+*      2 SN
+*     16 Ss
+*      1 Ss+
+*      6 Ssl
+*      1 STAT
+*      8 T
+*  делаю вывод что наиболее частый статус I< - поток ядра высокого приоритета. 
 *   s    is a session leader
 *   l    is multi-threaded (using CLONE_THREAD, like NPTL pthreads do)
 *   +    is in the foreground process group
