--- a/3.3HW.md
+++ b/3.3HW.md
@@ -90,24 +90,13 @@
 *  man: The return status of a pipeline is the exit status of the last command, unless the pipefail option is enabled.
 *  ===================================
 ### Используя -o stat для ps, определите, какой наиболее часто встречающийся статус у процессов в системе. В man ps ознакомьтесь (/PROCESS STATE CODES) что значат дополнительные к основной заглавной буквы статуса процессов. Его можно не учитывать при расчете (считать S, Ss или Ssl равнозначными).
-*   T    stopped by job control signal  // остановлены по управляющему сигналу
-*   I    Idle kernel thread  // поток ядра
-*   sudo ps aux | awk {'print $8'} | sort | uniq -c
-*     1 D<s
-*     5 I
-*    37 I<
-*     1 R+
-*    22 S
-*     4 S+
-*     1 Sl
-*     1 SLsl
-*      2 SN
-*     16 Ss
-*      1 Ss+
-*      6 Ssl
-*      1 STAT
+*  S    interruptible sleep (waiting for an event to complete)   // прерываемый сон 
+*    sudo ps aux | awk {'print $8'} | sort | uniq -w 1 -c
+*     43 I
+*      1 R+
+*     55 S
 *      8 T
-*  делаю вывод что наиболее частый статус I< - поток ядра высокого приоритета. 
+*  делаю вывод что наиболее частый статус S. 
 *   s    is a session leader
 *   l    is multi-threaded (using CLONE_THREAD, like NPTL pthreads do)
 *   +    is in the foreground process group
