--- a/3.7HW.md
+++ b/3.7HW.md
@@ -36,7 +36,7 @@
 * sudo apt install ifenslave  //Устанавливает пакет
 * отредактировать /etc/network/interfaces
 * iface bond0 inet static
-* # адрес, маска, шлюз. (можно еще что-нибудь по вкусу)
+*  адрес, маска, шлюз 
 *        address 10.0.0.11
 *        netmask 255.255.255.0
 *        gateway 10.0.0.254
@@ -46,9 +46,9 @@
 *        bond-mode balance-alb
 *        # интервал проверки линии в миллисекундах
 * bond-miimon 100
-*        # Задержка перед установкой соединения в миллисекундах
+*        Задержка перед установкой соединения в миллисекундах
 * bond-downdelay 200
-* # Задержка перед обрывом соединения в миллисекундах
+* Задержка перед обрывом соединения в миллисекундах
 *        bond-updelay 200
 * ==============
 ### Сколько IP адресов в сети с маской /29 ? Сколько /29 подсетей можно получить из сети с маской /24. Приведите несколько примеров /29 подсетей внутри сети 10.10.10.0/24.
