--- a/3.7HW.md
+++ b/3.7HW.md
@@ -40,15 +40,15 @@
 *        address 10.0.0.11
 *        netmask 255.255.255.0
 *        gateway 10.0.0.254
-*        # определяем подчиненные (объединяемые) интерфейсы
+*        определяем подчиненные (объединяемые) интерфейсы
 *        bond-slaves eth0 eth1
-*        # задаем тип бондинга
+*        задаем тип бондинга
 *        bond-mode balance-alb
-*        # интервал проверки линии в миллисекундах
-* bond-miimon 100
+*        интервал проверки линии в миллисекундах
+*        bond-miimon 100
 *        Задержка перед установкой соединения в миллисекундах
-* bond-downdelay 200
-* Задержка перед обрывом соединения в миллисекундах
+*        bond-downdelay 200
+*        Задержка перед обрывом соединения в миллисекундах
 *        bond-updelay 200
 * ==============
 ### Сколько IP адресов в сети с маской /29 ? Сколько /29 подсетей можно получить из сети с маской /24. Приведите несколько примеров /29 подсетей внутри сети 10.10.10.0/24.
