--- a/38HW.md
+++ b/38HW.md
@@ -82,4 +82,8 @@ show bgp x.x.x.x/32
 * UNCONN               0                    0                                  10.0.2.15%eth0:bootpc                                   0.0.0.0:*                   users:(("systemd-network",pid=825,fd=19))              0                      0                                          10.0.2.15:ssh                                       10.0.2.2:59023
 * ============
 5. Используя diagrams.net, создайте L3 диаграмму вашей домашней сети или любой другой сети, с которой вы работали. 
+*  Скрин проекта и сам проект с diagrams.net  прилагаю к заданию
+* ============
+
+
 
