--- a/4.1HW.md
+++ b/4.1HW.md
@@ -48,35 +48,49 @@ while ((1==1))
 
 Ваш скрипт:
 ```bash
+#!/usr/bin/env bash
+
+
 echo "Hello" > log
+array_ip[0]=192.168.0.1
+array_ip[1]=173.194.222.113
+array_ip[2]=87.250.250.242
 i=4
 while (($i >  0))
 do
-	b=$(date)
-	curl http://192.168.0.1:80
-	if (($? != 0))
-	        then
-                echo "host http://192.168.0.1:80 it's not available " $b >>log
+   for ip in ${array_ip[*]}
+   do
+        echo $ip
+        b=$(date)
+        u="http://"$ip":80"
+        curl $u
+        if (($? != 0))
+                then
+                echo "host http://" $ip ":80 it's not available " $b >>log
         else
-                echo "host http://192.168.0.1:80 it's available " $b >>log
+                echo "host http://" $ip ":80 it's available " $b >>log
         fi
-	curl http://173.194.222.113:80
-	if (($? != 0))
-        	then
-        	echo "host http://173.194.222.113:80 it's not available " $b >>log
- 	else
-	        echo "host http://173.194.222.113:80 it's available " $b >>log
-        fi
-	curl http://87.250.250.242:80
-	if (($? != 0))
-		then
-                echo "host http://87.250.250.242:80 it's not available " $b >>log
-        else
-                echo "host http://87.250.250.242:80 it's available " $b >>log
-	fi
-	i=$(($i-1))
+  done
+  i=$(($i-1))
 done
 ```
+```bash  // Вывод файла лог при тестировании 
+/devops-netology# nano log   
+Hello
+host http:// 192.168.0.1 :80 it's not available  Пн мар 21 15:17:57 +06 2022
+host http:// 173.194.222.113 :80 it's available  Пн мар 21 15:18:00 +06 2022
+host http:// 87.250.250.242 :80 it's available  Пн мар 21 15:18:00 +06 2022
+host http:// 192.168.0.1 :80 it's not available  Пн мар 21 15:18:00 +06 2022
+host http:// 173.194.222.113 :80 it's available  Пн мар 21 15:18:03 +06 2022
+host http:// 87.250.250.242 :80 it's available  Пн мар 21 15:18:03 +06 2022
+host http:// 192.168.0.1 :80 it's not available  Пн мар 21 15:18:03 +06 2022
+host http:// 173.194.222.113 :80 it's available  Пн мар 21 15:18:06 +06 2022
+host http:// 87.250.250.242 :80 it's available  Пн мар 21 15:18:06 +06 2022
+host http:// 192.168.0.1 :80 it's not available  Пн мар 21 15:18:06 +06 2022
+host http:// 173.194.222.113 :80 it's available  Пн мар 21 15:18:09 +06 2022
+host http:// 87.250.250.242 :80 it's available  Пн мар 21 15:18:09 +06 2022
+```
+
 ###  Обязательная задача 4
 Необходимо дописать скрипт из предыдущего задания так, чтобы он выполнялся до тех пор, пока один из узлов не окажется недоступным. Если любой из узлов недоступен - IP этого узла пишется в файл error, скрипт прерывается.
 
