--- a/4.1HW.md
+++ b/4.1HW.md
@@ -96,34 +96,36 @@ host http:// 87.250.250.242 :80 it's available  Пн мар 21 15:18:09 +06 2022
 
 Ваш скрипт:
 ``` bash
+#!/usr/bin/env bash
+
+
 echo  > error
 array_ip[0]=192.168.0.1
 array_ip[1]=173.194.222.113
 array_ip[2]=87.250.250.242
+y=0
 while (( 1 == 1 ))
-	do
-	b=$(date)
-	curl http://${array_ip[0]}:80
-	if (($? != 0))
-	        then
-	        echo ${array_ip[0]} "  " $b >>error
-	        break
-	fi
-	curl http://${array_ip[1]}:80
-	if (($? != 0))
-	        then
-	        echo ${array_ip[1]} "  "$b >>error
-	        break
-	fi
-	curl http://${array_ip[2]}:80
-	if (($? != 0))
-	        then
-	        echo ${array_ip[2]}"  " $b >>error
-	        break
-	fi
+        do
+        b=$(date)
+        for ip in ${array_ip[*]}
+          do
+          curl http://$ip:80
+          if (($? != 0))
+                then
+                echo $ip "  " $b >>error
+                y=1
+                break
+          fi
+        done
+        if (($y == 1))
+        then
+         break
+        fi
 done
+
 ```
 * // вывод в файл  в скрипте оставил дату.
 * cat error
-* 192.168.0.1    Чт мар 10 04:02:07 +06 2022
+* 192.168.0.1    Пн мар 21 16:18:08 +06 2022
+
 
